2008-11-06  Federico Mena Quintero  <federico@novell.com>

	* bookmark-agent.c (create_app_item): Free the title of the
	bookmark file.

2008-10-27  Federico Mena Quintero  <federico@novell.com>

	Fix some memory leaks:

	* tile.c (tile_finalize): Actually destroy the context menu, don't
	ref/sink it.
	(tile_set_property): Attach the context menu to the tile, don't
	just store its pointer.

	* nameplate-tile.c (nameplate_tile_finalize): Free the tooltips.

	* bookmark-agent.c (create_app_item): Free the URI.
	(create_doc_item): Likewise.
	(create_dir_item): Likewise.

2008-09-22  Scott Reeves  <sreeves@novell.com>
	* document-tile.c:
	show remote docs - use gio for tooltip, show icon

==================== 0.9.11 ====================

2008-09-07  Cosimo Cecchi  <cosimoc@gnome.org>

	* app-shell.c: (show_no_results_message):
	Escape the markup text properly.
	Patch by Denis Washington (#518749).

2008-08-22  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am:
	* app-shell.c: (generate_new_apps):
	* bookmark-agent.c: (bookmark_agent_move_item),
	(bookmark_agent_remove_item), (bookmark_agent_new), (finalize),
	(update_user_spec_path), (store_monitor_cb),
	(recent_item_mru_comp_func):
	* directory-tile.c: (directory_tile_new),
	(directory_tile_private_setup), (directory_tile_finalize),
	(rename_entry_activate_cb), (move_to_trash_trigger),
	(delete_trigger), (open_with_default_trigger):
	* document-tile.c: (document_tile_new),
	(document_tile_private_setup), (document_tile_finalize),
	(rename_entry_activate_cb), (open_with_default_trigger),
	(move_to_trash_trigger), (delete_trigger), (user_docs_trigger):
	* recent-files.c: (main_menu_recent_monitor_init),
	(main_menu_recent_file_init), (main_menu_recent_monitor_finalize),
	(main_menu_recent_file_finalize), (main_menu_recent_monitor_new),
	(get_files), (main_menu_recent_file_get_uri),
	(main_menu_recent_file_get_mime_type),
	(main_menu_recent_file_get_modified),